--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/es/projectalpha/scc/cmd/AirDropCMD.java=UTF-8
 encoding//src/es/projectalpha/scc/cmd/Report.java=UTF-8
+encoding//src/es/projectalpha/scc/events/Join.java=UTF-8
